--- a/index.html
+++ b/index.html
@@ -1,5 +1,2 @@
-# momentbi.com "Hola Ivonne"
-
-# "Awesome Site in The Making"
-
-Hola Hola 
+#Awesome Site in The Making
+#An amazing site is coming to this web address. Check back soon!
